[gd_scene load_steps=5 format=2]

[ext_resource path="res://nodes/OptionsPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://nodes/CustomButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 11
outline_color = Color( 0.329412, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 2 )

[node name="OptionsPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.941176 )

[node name="lb_title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -383.0
margin_right = 195.0
margin_bottom = -289.0
custom_colors/font_color = Color( 1, 0.764706, 0.764706, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 1 )
text = "OPCIONES"
align = 1
valign = 1
autowrap = true

[node name="btn_lang" parent="." instance=ExtResource( 4 )]
margin_top = -137.0
margin_bottom = -37.0
focus_mode = 0
text = "Idioma Espa√±ol"

[node name="btn_clear" parent="." instance=ExtResource( 4 )]
margin_top = -33.0
margin_bottom = 67.0
focus_mode = 0
text = "Borrar Datos"

[node name="btn_fullscreen" parent="." instance=ExtResource( 4 )]
margin_top = 71.0
margin_bottom = 171.0
focus_mode = 0
text = "Pantalla completa"

[node name="btn_quit" parent="." instance=ExtResource( 4 )]
margin_top = 199.0
margin_bottom = 299.0
focus_mode = 0
text = "Back"

[node name="blockmouse" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
